# kubeconform.bzl

./: .gitignore  BUILD  MODULE.bazel  README.md  go.mod  kubeconform.bzl
cmd/openapi2jsonschema/: BUILD.bazel  main.go  main_test.go
examples/hermetic/: BUILD  MODULE.bazel  README.md  crd.yaml  go.mod
examples/simple/: BUILD  MODULE.bazel  widget.yaml
kubeconform/: BUILD  defs.bzl  extensions.bzl  kubernetes_schemas.bzl  openapi2jsonschema.bzl  versions.bzl
kubeconform/toolchain/: toolchain.bzl
test/: BUILD
