"""Bazel rules for Kubernetes manifest validation using kubeconform."""

module(
    name = "kubeconform.bzl",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Dev dependencies
bazel_dep(name = "lazy_bazel_env.bzl", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "rules_multitool", version = "1.11.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

git_override(
    module_name = "lazy_bazel_env.bzl",
    commit = "55685e5",
    remote = "https://github.com/arkeros/lazy_bazel_env.bzl.git",
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool", dev_dependency = True)
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "in_yaml_go_yaml_v4",
)
