"""Example using a compiled kubeconform binary from Go source."""

module(
    name = "kubeconform_hermetic_example",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "kubeconform.bzl", version = "0.0.0")
local_path_override(
    module_name = "kubeconform.bzl",
    path = "../..",
)

# NOTE: This example compiles kubeconform from Go source and registers it as a toolchain.
# See BUILD file for the toolchain definition.
register_toolchains("//:kubeconform_toolchain")

# Kubernetes schemas for validation
kubeconform = use_extension("@kubeconform.bzl//kubeconform:extensions.bzl", "kubeconform")
kubeconform.kubernetes_schemas(kubernetes_version = "1.33.5")
use_repo(kubeconform, "kubernetes_schemas")

# Go toolchain for compiling kubeconform
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Dev environment for local tooling (go, gazelle, etc.)
bazel_dep(name = "lazy_bazel_env.bzl", version = "0.0.0")
git_override(
    module_name = "lazy_bazel_env.bzl",
    commit = "55685e5",
    remote = "https://github.com/arkeros/lazy_bazel_env.bzl.git",
)

# Configure Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# Import Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies must be listed explicitly
use_repo(
    go_deps,
    "com_github_yannh_kubeconform",
)
